[tool.poetry]
name="adk"
version = "0.0.1"
description = "Demo de ADK"
authors = ["Ilver Anache<ianache@crossnetcorp.com>"]
packages = [{ include = "*.py", from = "." }]

[tool.poetry.dependencies]
python = ">=3.9"
# numpy = "^1.25.0"
# sentencepiece = ">=0.1.98,<=0.2.0"
# transformers = ">=4.35.2,<5.0.0"
# protobuf = ">=4.21.0,<5.0.0"
# gguf = { path = "./gguf-py" }
# torch = { version = "^2.2.0", source = "pytorch" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


